--- a/ui/template.html
+++ b/ui/template.html
@@ -61,11 +61,11 @@
         <div class="loader"></div>
     </div>
 
-    <p style="display: none; color: red" id="wrongNetWarning">Your browser isn't configured for POA network. You can only read
+    <p style="display: none; color: red" id="wrongNetWarning">Your browser isn't configured for Matic network. You can only read
         not write.
-        <a href="https://help.zondirectory.com/configure-poa-network/">Configure POA network.</a></p>
+        <a href="https://help.zondirectory.com/configure-matic-network/">Configure Matic network.</a></p>
     <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
-    <p style="color: red">The software is not yet configured to use with real money and real data.</p>
+    <p style="color: red">This is a preliminary alpha release! Use at your own risk.</p>
 
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
