pre-alpha prerelease

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -17,6 +17,7 @@
                             <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
                             <p>Select your Ethereum network:
                                 <select id="web3network" onchange="networkChange()">
+                                    <option value="0x89">Matic</option>
                                     <option value="0x63">POA Core</option>
                                     <option value="0x4d">POA Sokol (test mode)</option>
                                 </select>
