--- a/ui/template.html
+++ b/ui/template.html
@@ -65,7 +65,8 @@
         not write.
         <a href="https://help.zondirectory.com/configure-matic-network/">Configure Matic network.</a></p>
     <p style="display: none; color: red" id="testModeWarnining">Site works in test mode! Change <a href="settings.html">settings</a>.</p>
-    <p style="color: red">This is a preliminary alpha release! Use at your own risk.</p>
+    <p style="color: red">This is a preliminary alpha release without full functionality! Use at your own risk.
+        For a fully functional (but only testing and no design) see <a href="https://beta.zondirectory.com">here</a>.</p>
 
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
