--- a/ui/affiliates.html
+++ b/ui/affiliates.html
@@ -12,7 +12,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            <p>Affiliate's ETH commission (subtracted from shareholders profit, may change in the future):</p>
+                            <p>Affiliate's MATIC commission (subtracted from shareholders profit, may change in the future):</p>
                             <ul>
                                 <li>for attracting sellers: <span id="sellerBonus"></span>%</li>
                                 <li>for attracting buyers: <span id="buyerBonus"></span>%</li>
