--- a/ui/author-purchases.html
+++ b/ui/author-purchases.html
@@ -23,7 +23,7 @@
                                 <thead>
                                     <tr>
                                         <th>Item</th>
-                                        <th>Price paid (in ETH)</th>
+                                        <th>Price paid (in MATIC)</th>
                                         <th>Author received</th>
                                         <th>Number of items paid for</th>
                                         <th>Shipping info</th>
