--- a/ui/category.html
+++ b/ui/category.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="featured__item__text col-md-12">
-                            <h6 class="price"><a href="#">ETH<span class="priceETH">6.00</span></a></h6>
+                            <h6 class="price"><a href="#">MATIC<span class="priceETH">6.00</span></a></h6>
                             <h5 class="option">Buy</h5>
                         </div>
                         <div class="voteStr col-md-12"></div>
