--- a/ui/description.html
+++ b/ui/description.html
@@ -26,7 +26,7 @@
                                 <p>Short (meta) description: <textarea id="shortDescription" name="shortDescription"></textarea></p>
                                 <p>Description: <textarea id="description" name="description"></textarea></p>
                                 <p>License: <textarea id="license" name="license"></textarea></p>
-                                <p>Minimal price in ETH: <input type="text" id="priceETH" name="priceETH" required="required"/></p>
+                                <p>Minimal price in MATIC: <input type="text" id="priceETH" name="priceETH" required="required"/></p>
                                 <div id="multiVoterDiv">
                                     <h2>Categories</h2>
                                     <div id="multiVoter"></div>
