--- a/ui/download.html
+++ b/ui/download.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="pl-3 product__details__price">ETH <span class="priceETH"/> ($<span class="priceUSD"/>)</div>
+                                    <div class="pl-3 product__details__price">MATIC <span class="priceETH"/> ($<span class="priceUSD"/>)</div>
                                 </div>
                                 <div class="row">
                                     <div class="C__category mt-3 mr-3">Quantity:</div>
@@ -118,7 +118,7 @@
                     (Warning: All your purchase information will be published.)</p>
                 <p>Prices:</p>
                 <ul>
-                    <li>in ETH: <span class="priceETH"></span> ($<span class="priceUSD"></span>)
+                    <li>in MATIC: <span class="priceETH"></span> ($<span class="priceUSD"></span>)
                         <input id="buyETH" class="buy" type="button" value="Buy" onclick="payETH()"/>
                         <input type="button" value="Donate" onclick="donateETH()"/></li>
                     <li>in AR: <span class="priceAR"></span> ($<span class="priceUSDAR"></span> - <span class="arDiscount"></span>% discount) |
