--- a/ui/edit-category.html
+++ b/ui/edit-category.html
@@ -35,7 +35,7 @@
                             </form>
                             <div id="multiVoterDiv">
                                 <h2>Parent categories</h2>
-                                <p>You vote for parent categories with ETH, with the discount TODO.
+                                <p>You vote for parent categories with MATIC, with the discount TODO.
                                     For your owned parent categories voting is free.
                                     Add your new category to at least one parent category to have more traffic.</p>
                                 <div id="multiVoter"></div>
