--- a/ui/help.html
+++ b/ui/help.html
@@ -31,9 +31,9 @@
                             <p>For an unowned category, users vote with Ether cryptocurrency which stuff will be on the top and which goes to the bottom (spam zone) of the list of stuff.</p>
                             <p>So users themselves form a category structure and what stuff will be in categoiries.</p>
                             <h2>How to earn money</h2>
-                            <p>You can Earn ETH and AR cryptocurrencies with this site (Fees below are subject to change):</p>
+                            <p>You can Earn MATIC and AR cryptocurrencies with this site (Fees below are subject to change):</p>
                             <ul>
-                                <li>You earn 90% of your file sales (both in ETH and in AR).</li>
+                                <li>You earn 90% of your file sales (both in MATIC and in AR).</li>
                                 <li>You earn 50% of upvotes of your posts, links, owned categoiries.</li>
                                 <li>Finally you can advertise your own site with links and posts.</li>
                             </ul>
