--- a/ui/author.html
+++ b/ui/author.html
@@ -32,7 +32,7 @@
                                 <thead>
                                     <tr>
                                         <th>Title</th>
-                                        <th>Price in ETH</th>
+                                        <th>Price in MATIC</th>
                                         <th>Operations</th>
                                     </tr>
                                 </thead>
