--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
                     </form>
                 </div>
                     <div class="hero__search__phone__text">
-                        <h5>ETH 3.00</h5>
+                        <h5>MATIC 3.00</h5>
                     </div>
              </div>
         </div>
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="featured__item__text col-md-12">
-                            <h6 class="price"><a href="#" class="link">ETH<span class="priceETH">6.00</span></a></h6>
+                            <h6 class="price"><a href="#" class="link">MATIC<span class="priceETH">6.00</span></a></h6>
                             <h5 class="option">Buy</h5>
                         </div>
                         <div class="voteStr col-md-12"></div>
