--- a/ui/shareholder.html
+++ b/ui/shareholder.html
@@ -20,24 +20,24 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>Shareholders profit + direct author profit</h2>
-                            <p>Your earned amount in ETH: <span id="ETH"></span>
+                            <p>Your earned amount in MATIC: <span id="MATIC"></span>
                                 <input type="button" value="Withdraw" onclick="withdrawETH()"/></p>
-                            <p>There are (non-voting) shares of two kinds: shares for ETH profit and
+                            <p>There are (non-voting) shares of two kinds: shares for MATIC profit and
                                 shares for AR profit. Investment is not solicited, but you could buy
                                 shares at an exchange (when available).</p>
-                            <p>Your ETH profit sharing tokens: <span id="tokenETH"></span>
+                            <p>Your MATIC profit sharing tokens: <span id="tokenETH"></span>
                                 (<code id="pstAddressElt"></code> token in MetaMask)</p>
                             <p>Your AR wallet (<a href="author.html">Set</a>): <code id="arWallet"></code></p>
                             <p>Your AR profit sharing tokens: <span id="tokenAR"></span>
                                 (AR profit is distributed automatically, you don't need to withdraw.)</p>
 
                             <h2>Affiliates of authors</h2>
-                            <p>There are (non-voting) shares of two kinds: shares for ETH profit and
+                            <p>There are (non-voting) shares of two kinds: shares for MATIC profit and
                                 shares for AR profit (the latter not yet implemented). You could buy authors'
                                 shares at an exchange (when available).</p>
                             <table>
                                 <thead>
-                                    <tr><th>Author's account</th><th>Your earned amount (ETH)</th></tr>
+                                    <tr><th>Author's account</th><th>Your earned amount (MATIC)</th></tr>
                                 </thead>
                                 <tbody id="authors"></tbody>
                             </table>
