--- a/ui/template.html
+++ b/ui/template.html
@@ -169,7 +169,7 @@
                         </form>
                     </div>
                             <div class="hero__search__phone__text">
-                            <h5>ETH <span class="accountBalance"></span></h5>
+                            <h5>MATIC <span class="accountBalance"></span></h5>
                         </div>
                  </div>
             </div>
