--- a/ui/settings.html
+++ b/ui/settings.html
@@ -12,10 +12,10 @@
             <p>This page uses cookies.</p>
             <p><input type="button" onclick="reconnectWeb3()" value="Re-connect Web3 provider"/></p>
             <p>Select your Ethereum network:
-                <select id="web3network" onchange="networkChange()">
-                    <option value="0x63">POA Core</option>
-                    <option value="0x4d">POA Sokol (test mode)</option>
-                </select>
+                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x89"/>Matic</label>
+                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x13881"/>Matic Mumbai (test mode)</label>
+                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x63"/>POA Core</label>
+                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x4d"/>POA Sokol (test mode)</label>>
             </p>
             <p><a href="templates.html">Blog templates</a></p>
         </div>
