--- a/ui/settings.html
+++ b/ui/settings.html
@@ -15,7 +15,7 @@
                 <label><input type="radio" name="web3network" onchange="networkChange()" value="0x89"/>Matic</label>
                 <label><input type="radio" name="web3network" onchange="networkChange()" value="0x13881"/>Matic Mumbai (test mode)</label>
                 <label><input type="radio" name="web3network" onchange="networkChange()" value="0x63"/>POA Core</label>
-                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x4d"/>POA Sokol (test mode)</label>>
+                <label><input type="radio" name="web3network" onchange="networkChange()" value="0x4d"/>POA Sokol (test mode)</label>
             </p>
             <p><a href="templates.html">Blog templates</a></p>
         </div>
